--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -7,7 +7,7 @@
     url : "https://annapurnaserver.herokuapp.com/restapi/farmerdetail/",
     type: "POST",
 	dataType: 'json',
-    data : { 'username' : 'Ramesh Pal', "csrfmiddlewaretoken": '{{ csrf_token }}' },
+    data : { 'username' : 'Rajpal Yadav', "csrfmiddlewaretoken": '{{ csrf_token }}' },
     success: function(data)
     {
         //data - response from server
