--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -4,7 +4,8 @@
 	function getfarmersdetails(){
 		console.log('send request');
 		$.ajax({
-    url : "10.0.3.23/restapi/farmerdetail/",
+//    url : "http://10.0.3.23:8028/restapi/farmerdetail/",
+    url : "http://127.0.0.1:8000/restapi/farmerdetail/",
     type: "POST",
 	dataType: 'json',
     data : { 'username' : 'Avenash', "csrfmiddlewaretoken": '{{ csrf_token }}' },
@@ -17,8 +18,29 @@
 });	
 	}
 	
+	function getlandlorddetails(){
+		console.log('send request');
+		$.ajax({
+//    url : "http://10.0.3.23:8028/restapi/landlorddetail/",
+    url : "http://127.0.0.1:8000/restapi/landlorddetail/",
+    type: "POST",
+	dataType: 'json',
+    data : { 'username' : 'Ambuj', "csrfmiddlewaretoken": '{{ csrf_token }}' },
+    success: function(data)
+    {
+        //data - response from server
+		console.log(data);
+		$('#request').html(data.landlord_detail);
+    }
+});	
+	}
+	
 </script>
 <h1>Famer Data in JSON format</h1>
 
 <button onclick="getfarmersdetails()">Famer's data</button>
+
+<h1>Landlord Data in JSON format</h1>
+
+<button onclick="getlandlorddetails()">Landlord's data</button>
 <div id='request'></div>
