--- a/templates/index/farms.html
+++ b/templates/index/farms.html
@@ -15,7 +15,7 @@
     {
         //data - response from server
 	        
-	        var obj = JSON.parse(data.farmer_detail);
+	        var obj = JSON.parse(data.farms_detail);
 	    	console.log('Hello '+ obj);
 	    	
 	    	//var filter=JSON.parse(obj);
